ci/Jenkinsfile: do not handle submodule in SCM step
We do this in a separate step to allow cleanup patched
or otherwise manipulated submodules. Since NXP BSP needs
manipulations in meta-freescale and we need to
further improve submodule handling to allow revert local
submodules changes before updating submodules.

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -32,9 +32,11 @@ def checkoutMetaLayers(directoryName) {
         sshagent(['jenkins-master-key']) {
             sh """
             git submodule sync
+            git submodule foreach --recursive git clean -fdx
+            git submodule foreach --recursive git checkout .
             git submodule update --init
             git submodule foreach --recursive git clean -fdx
-            git submodule foreach --recursive 'git checkout ./*'
+            git submodule foreach --recursive git checkout .
             git clean -fdx sources templates
             git clean -fx"""
         }
@@ -54,7 +56,7 @@ def prepareWorkspace(directoryName){
         doGenerateSubmoduleConfigurations: false,
         extensions: [
             [$class: 'SubmoduleOption',
-                disableSubmodules: false,
+                disableSubmodules: true,
                 parentCredentials: true,
                 recursiveSubmodules: true,
                 reference: '',
