--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -205,9 +205,13 @@ pipeline {
     }
 
     triggers {
-            cron('H H(0-4) * * *')
-            pollSCM('''# Alle fünf Minuten von 7.00-20.00 an jedem Wochentag
-                H/5 7-20 * * 1-5''')
+        /* nightly rebuild */
+        cron('H H(0-4) * * *')
+        /*
+         * TODO: we should use gitlab webhooks here ...
+         * pollSCM('''# Alle fünf Minuten von 7.00-20.00 an jedem Wochentag
+         *       H/5 7-20 * * 1-5''')
+         */
     }
 
     environment {
