ci/Jenkinsfile: copy results of fetch stage to DL_DIR
When building from sstate cache, fetch is not needed. As a result
the shared DL_DIR will be empty. Since fetch stage forces a fetch
for all packages, the stage local DL_DIR of fetch can be used to
fill global DL_DIR.

When creating source mirror, DL_DIR is needed as reference. Only
files that can be found in deployed sources and DL_DIR may go
into the source mirror archive.

Tested with forked development branch of zeus-tqma8-next

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -73,6 +73,8 @@ def prepareWorkspace(directoryName){
             url: "${env.GIT_URL}"
         ]]
     ])
+    echo "create shared DL_DIR ${env.WORKSPACE}/${env.DL_DIR} ..."
+    sh "mkdir -p ${env.WORKSPACE}/${env.DL_DIR}"
 }
 
 def mirrorConfiguration(directoryName) {
@@ -80,6 +82,7 @@ def mirrorConfiguration(directoryName) {
         sshagent(['jenkins-master-key']) {
             echo "creat mirror packages for all machines of config ${directoryName} ..."
             sh "./ci/build-all ${env.BUILD_DIR}-mirror \$(basename \$(pwd)) mirror"
+            sh "cp -ruv ${env.BUILD_DIR}-mirror/downloads/* ${env.WORKSPACE}/${env.DL_DIR}"
         }
     }
 }
@@ -200,6 +203,7 @@ pipeline {
         disableConcurrentBuilds()
         timestamps()
     }
+
     triggers {
             cron('H H(0-4) * * *')
             pollSCM('''# Alle fünf Minuten von 7.00-20.00 an jedem Wochentag
