ci/Jenkinsfile: workaround for repos without default HEAD
Set to last remote branch - first would be current HEAD which
could be wrong after fetching with --prune

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -44,7 +44,7 @@ def checkoutMetaLayers(directoryName) {
             sh """
             git submodule sync
             git submodule foreach --recursive 'git fetch --prune --prune-tags origin'
-            git submodule foreach --recursive 'git remote set-head origin --auto'
+            git submodule foreach --recursive 'git remote set-head origin \$(basename \$(git branch -r | tail -1))'
             git submodule foreach --recursive 'git gc'
             git submodule foreach --recursive 'git reset --hard origin/HEAD'
             git submodule foreach --recursive 'git clean -fdx'
