ci/jenkinsfile: use hardknott build slave
Signed-off-by: Martin Schmiedel <Martin.Schmiedel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -209,7 +209,7 @@ def handleGlobalData(directoryName) {
  */
 pipeline {
     agent {
-        label 'master'
+        label 'yocto-hardknott'
     }
 
     options {
