--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -228,6 +228,7 @@ pipeline {
         WS_IMX = "CONFIGS/imx"
         WS_MIN = "CONFIGS/minimal"
         WS_TI = "CONFIGS/ti"
+        WS_RZG2 = "CONFIGS/rzg2"
         DL_DIR = "shared-dl-dir"
         BUILD_DIR = "buildspace"
         DEPLOY_DIR = "deployment"
@@ -258,6 +259,10 @@ pipeline {
                         wipeOutBuildspace("${env.WS_TI}")
                         prepareWorkspace("${env.WS_TI}")
                     },
+                    "rzg2" : {
+                        wipeOutBuildspace("${env.WS_RZG2}")
+                        prepareWorkspace("${env.WS_RZG2}")
+                    },
                 )
             }
         }
@@ -272,6 +277,9 @@ pipeline {
                     },
                     "ti" : {
                         handleBuildCause("${env.WS_TI}")
+                    },
+                    "rzg2" : {
+                        handleBuildCause("${env.WS_RZG2}")
                     },
                 )
             }
@@ -288,6 +296,9 @@ pipeline {
                     "ti" : {
                         checkoutMetaLayers("${env.WS_TI}")
                     },
+                    "rzg2" : {
+                        checkoutMetaLayers("${env.WS_RZG2}")
+                    },
                 )
             }
         }
@@ -303,6 +314,9 @@ pipeline {
                     "ti" : {
                         mirrorConfiguration("${env.WS_TI}")
                     },
+                    "rzg2" : {
+                        mirrorConfiguration("${env.WS_RZG2}")
+                    },
                 )
             }
         }
@@ -317,6 +331,9 @@ pipeline {
                     },
                     "ti" : {
                         buildConfiguration("${env.WS_TI}")
+                    },
+                    "rzg2" : {
+                        buildConfiguration("${env.WS_RZG2}")
                     },
                 )
             }
@@ -341,6 +358,8 @@ pipeline {
             wipeOutBuildspace("${env.WS_MIN}")
             archiveArtifacts artifacts: "${env.WS_TI}/${env.BUILD_DIR}/${env.DEPLOY_DIR}/*"
             wipeOutBuildspace("${env.WS_TI}")
+            archiveArtifacts artifacts: "${env.WS_RZG2}/${env.BUILD_DIR}/${env.DEPLOY_DIR}/*"
+            wipeOutBuildspace("${env.WS_RZG2}")
             archiveArtifacts artifacts: "ci-meta-tq.*.tar.gz"
         }
         unstable {
