--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -156,10 +156,10 @@ def handleBuildCause(directoryName) {
         cause = null
         if (reason.contains("TimerTriggerCause")) {
             println "This job was caused by Timer, rm tmp ... (NIGHTLY)"
-            sh "rm -rf ${directoryName}/${env.BUILD_DIR}/tmp"
+            sh "rm -rf ${directoryName}/${env.BUILD_DIR}_*/tmp"
         } else if (reason.contains("UserIdCause")) {
-            println "This job was caused by user, rm ${env.BUILD_DIR} ... (RELEASE)"
-            sh "rm -rf ${directoryName}/${env.BUILD_DIR}"
+            println "This job was caused by user, rm build directory ... (RELEASE)"
+            sh "rm -rf ${directoryName}/${env.BUILD_DIR}_*"
         } else {
             println "build cause : " + reason
         }
