ci/Jenkinsfile: fix fetching repos with moving tags
This should fix errors like:

! [rejected]        CORSTONE1000-2021.12.15 -> CORSTONE1000-2021.12.15  (would clobber existing tag)

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -43,7 +43,7 @@ def checkoutMetaLayers(directoryName) {
         sshagent(['jenkins-master-key']) {
             sh """
             git submodule sync
-            git submodule foreach --recursive 'git fetch --prune --prune-tags origin'
+            git submodule foreach --recursive 'git fetch --prune --no-tags origin'
             git submodule foreach --recursive 'git remote set-head origin \$(basename \$(git branch -r | tail -1))'
             git submodule foreach --recursive 'git gc'
             git submodule foreach --recursive 'git reset --hard origin/HEAD'
